# robot_octopus

./: README.md  pyproject.toml  setup_workspace.sh
src/robot_octopus/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_octopus/config/: example_params.yaml
src/robot_octopus/launch/: full_system.launch.py
src/robot_octopus/msg/: ControlCommand.msg  ObjectDetection.msg  SensorData.msg
src/robot_octopus/resource/: robot_octopus.urdf
src/robot_octopus/robot_octopus/actuator/: actuator_node.py
src/robot_octopus/robot_octopus/control/: control_node.py
src/robot_octopus/robot_octopus/global/: system_manager_node.py
src/robot_octopus/robot_octopus/perception/: perception_node.py
src/robot_octopus/robot_octopus/planning/: planning_node.py
src/robot_octopus/robot_octopus/sensor/: sensor_node.py
src/robot_octopus/srv/: PathPlanning.srv
